# sonicscan

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-action.yml
music_downloader/: Dockerfile  README.md  app.py  fly.toml  pyproject.toml
music_finder/: .env.example  .gitignore  Cargo.toml  README.md  package.json  vercel.json
music_finder/api/: spotify.rs  youtube.rs
music_finder/src/: lib.rs  schema.rs
src/: App.tsx  Global.css  Songs.tsx  card.tsx  index.tsx  schema.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  music_finder.rs  utils.rs
temp/: Cargo.toml  README.md
temp/src/: db.rs  main.rs  music_finder.rs  schema.rs  utils.rs
