[package]
name = "music_finder"
version = "0.1.0"
edition = "2024"
authors = [ "Rounak Sen <103501472+rony0000013@users.noreply.github.com>" ]

# [package.metadata.release]
# release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [lib]
# crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rspotify = { version = "0.14.0", default-features = false, features = ["futures", "__async", "reqwest-rustls-tls", "client-reqwest"] }
regex = "1.11.1"
vercel_runtime = "1.1.4"
tokio = { version = "1.44.2", features = ["macros", "time", "rt-multi-thread"] }
dotenvy = "0.15.7"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
http = "1.3.1"

[[bin]]
name = "youtube"
path = "api/youtube.rs"

[[bin]]
name = "spotify"
path = "api/spotify.rs"
