[package]
name = "sonic-scan"
version = "0.1.0"
description = "A Music Fingerprinting and Identification App"
authors = ["Rounak Sen <103501472+rony0000013@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }



[dependencies]
tauri = { version = "2", default-features = false, features = ["rustls-tls", "common-controls-v6", "wry", "compression"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
kdtree = "0.7.0"
rayon = "1.10.0"
realfft = "3.4.0"
serde_bytes = "0.11.17"
sled = "0.34.7"
symphonia = { version = "0.5.4", features = ["all", "all-codecs", "all-formats"] }
tokio = { version = "1.44.2", features = ["macros", "time", "rt-multi-thread", "fs"] }
image = "0.25.6"
hound = "3.5.1"
redis = { version = "0.30.0", features = ["tls-rustls", "tls-rustls-webpki-roots", "tokio-comp", "tokio-rustls-comp", "connection-manager"] }
dotenvy = "0.15.0"
backon = "1.4.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11.1"
